fixes https://luceeserver.atlassian.net/browse/LDEV-1579

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,7 @@
 bundlename: ehcache.extension
 filename: ehcache-extension
 bundleversion: 2.10.0.
+bundleversionappendix: -SNAPSHOT
 id: 87FE44E5-179C-43A3-A87B3D38BEF4652E
 label: EHCache
 description: Local EHCache.
