Fix RMI manual distribution bug
* RMI URLs where incorrectly being cast to lowercase, which means manual distribution only worked if the cache name was also in lowercase

Fixed issues with distributed cache (see LDEV-3279)

* Added EHCacheClassLoader to resolve issues with loading RMI classes
* The <cacheManagerEventListenerFactory /> settings are now always honored (previously the properties were only populated when set to "manual" distribution mode, but it's need for "automatic" mode in order to control the ports being used)
* Changed default ehCache distribution configuration for optimal performance by disable "via Copy" and "put" operations
* Refactored code so serialization only happens when replicating objects using the "via copy" options (other distributed cache options just mark the objects for removal, so serialization is not required)
* Fixed bug in TypeUtil.toJVM() which caused components to not be fully serialized (it was being treated as a struct and missing properties/methods extended from other components)

--- a/source/java/.classpath
+++ b/source/java/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="lib" path="libs/jsp-api-2.2.jar"/>
 	<classpathentry kind="lib" path="libs/org.apache.felix.framework-4.2.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/loader"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/runtime"/>
 	<classpathentry kind="lib" path="libs/lucee.jar"/>
 	<classpathentry kind="lib" path="libs/org.lucee.ehcache-2.10.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
