--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,4 +55,4 @@ jobs:
         extensionDir: ${{ github.workspace }}/dist/modern
         extensions: 8D7FB0DF-08BB-1589-FE3975678F07DB17,37C61C0A-5D7E-4256-8572639BE0CF5838,FAD1E8CB-4F45-4184-86359145767C29DE # the compress, orm, esapi extensiona are required to run tests lucee with lucee-light      
       env:
-        testLabels: ehcache
+        testLabels: ehcache,cache
