add support for local tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,4 +55,5 @@ jobs:
         extensionDir: ${{ github.workspace }}/dist
       env:
         testLabels: ehcache,cache
+        testAdditional: ${{ github.workspace }}/tests
 
