--- a/.github/workflows/main-5.4.yml
+++ b/.github/workflows/main-5.4.yml
@@ -1,4 +1,4 @@
-name: Java CI - Lucee latest
+name: Java CI - Lucee 5.4
 
 on: [push, pull_request,workflow_dispatch]
 
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       luceeVersion: light-6.0.0.152-SNAPSHOT
-      luceeVersionQuery: 0/all/light
+      luceeVersionQuery: 5.4/all/light
 
     steps:
     - uses: actions/checkout@v4
